# labtrack

./: .env.example  .gitignore  2-23-plan.md  AGENTS.md  CLAUDE.md  COA TEMPLATE.docx  COA results.xlsx  LAB_TEST_TYPES_IMPLEMENTATION.md  Makefile  PRD.md  PYDANTIC_AI_IMPLEMENTATION.md  README.md  coa-creator.py  future2todo.md  futuretodo.md  init_demo_data.py  product_seed_data.csv  pytest.ini  requirements.txt  run_dev.sh  streamlit_app.py
backend/: alembic.ini  generate_seed_tests.py  init_demo_data.py  product_test_mapping.csv  pyproject.toml  pytest.ini  requirements.txt  seed_lab_test_types.py  seed_tests.csv  setup.py  streamlit_app.py
backend/app/: cli.py  config.py  database.py  dependencies.py  main.py  seed.py
backend/app/core/: __init__.py  rate_limit.py  security.py
backend/app/models/: README.md  __init__.py  audit.py  base.py  coa.py  coa_category_order.py  coa_release.py  customer.py  daane_coc_daily_counter.py  daane_test_mapping.py  email_history.py  (+12 more)
backend/migrations/: env.py
backend/scripts/: bulk_insert_samples.py  generate_organoleptic_specs.py  merge_organoleptic_category.py  populate_sample_tracker.py  seed_odor_specs.py  seed_product_test_specs.py  update_metals_specs.py
backend/templates/: coa_template.html  daane_coc_v8.xlsx
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_coa_approval_audit.py  test_coa_generation.py  test_comprehensive_coverage.py  test_config.py  test_default_spec_integration.py  test_e2e_scenarios.py  test_lab_test_type_default_spec.py  test_lab_test_types_integration.py  test_lot_product_tests_integration.py  test_lot_with_specs.py  test_manual_entry.py  test_models.py  test_pdf_parser_integration.py  test_pdf_parsing.py  test_product_test_specifications_integration.py  test_pydantic_ai_provider.py  test_release_validation.py  test_retest_service.py  test_schemas.py  test_services.py  test_services_extended.py  test_table_extraction.py  test_ui_error_display.py
(+272 files in other folders)
